<resources>
    <string name="app_name">NotesApp</string>
    <string name="notes">My Notes</string>
    <string name="storage_permission_text">Ứng dụng này cần quyền truy cập vào bộ nhớ của bạn.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ti_u">Tiêu đề</string>
    <string name="ti_u_ph">Tiêu đề phụ</string>
    <string name="i_n_ghi_ch_v_o_y">Điền ghi chú vào đây</string>
    <string name="ch_n_m_u">Chọn Màu</string>
    <string name="th_m_nh">Thêm ảnh</string>
    <string name="th_m_link_web">Thêm link Web</string>
    <string name="x_a_ghi_ch">Xóa ghi chú</string>
    <string name="todo">TODO</string>
    <string name="http">http://</string>
    <string name="i_n_a_ch_web_c_a_b_n">Điền địa chỉ Web của bạn</string>
    <string name="x_c_nh_n">Xác nhận</string>
    <string name="h_y">Hủy</string>
    <string name="t_o_ghi_ch_m_i">Tạo Ghi Chú Mới</string>
    <string name="notes_app">Notes App</string>
    <string name="ghi_ch">Ghi Chú</string>
    <string name="ghi_ch_c_a_b_n">Ghi Chú Của Bạn</string>

</resources>